--- a/scheme-light.css
+++ b/scheme-light.css
@@ -1,4 +1,4 @@
-/* Light theme / Светлая тема */
+scheme-dark-blue
 :root {
     --top-menu-color: #5696ff;
     --top-menu-submenu-back-color: #4a7cce;
