--- a/scheme-light.css
+++ b/scheme-light.css
@@ -1,37 +1,37 @@
-/* Light theme / Светлая тема */
+/* Dark blue theme / Темно-синяя тема */
 :root {
-    --top-menu-color: #5696ff;
-    --top-menu-submenu-back-color: #4a7cce;
-    --top-menu-button-hover-color: #4376cc;
-    --top-menu-border-color: #eee;
-
-    --l-page-back-color-desktop: #f8f8f8;
-    --l-page-back-color-mobile: white;
-    --quote-back-color: #eaeaea;
-    --tile-back-color: white;
-    --tile-border-color: #ccc;
-    --main-headline-color: #71a7ff;
-
-    --main-text-shadow-color: #0000;
-    --main-text-color: black;
-    --sec-text-color: #424242;
-    --ter-text-color: #666666;
-    --quat-text-color: #828282;
-    --profile-nickname-color: black;
-
-    --li-hover-color: #d3d3d3;
-    --li-active-color: #71a7ff;
-    --main-link-color: #176093;
-    --main-link-hover-color: #ff5016;
-    --sec-link-color: #4a4a4a;
-    --sec-link-active-color: #145699;
-    --sec-link-hover-color: #303030;
-
-    --button-hover-color: #3175e2;
-    --orange-hover-color: #ff5900;
-    --green-color: #1c9e16;
-    --blue-color: #0074d9;
-
+    --top-menu-color: #004260;
+    --top-menu-submenu-back-color: #004058;
+    --top-menu-button-hover-color: #003250;
+    --top-menu-border-color: #f0f0f0;
+    
+    --l-page-back-color-desktop: #0c2030;
+    --l-page-back-color-mobile: #132838;
+    --quote-back-color: #07384f;
+    --tile-back-color: #052c40;
+    --tile-border-color: #777;
+    --main-headline-color: #0b709e;
+    
+    --main-text-shadow-color: black;
+    --main-text-color: white;
+    --sec-text-color: #ebebeb;
+    --ter-text-color: #dedede;
+    --quat-text-color: #ababab;
+    --profile-nickname-color: #6fcaf7;
+    
+    --li-hover-color: #06597f;
+    --li-active-color: #0b709e;
+    --main-link-color: #81dbf8;
+    --main-link-hover-color: #bba0ff;
+    --sec-link-color: #dedede;
+    --sec-link-active-color: #fff430;
+    --sec-link-hover-color: white;
+    
+    --button-hover-color: #06597f;
+    --orange-hover-color: #ff8644;
+    --green-color: #2ad370;
+    --blue-color: #4094f0;
+    
     --bar-s0-color: #4682b4;
     --bar-s1-color: #6295bd;
     --bar-s2-color: #79a9cf;
